// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleButton test render test render correctly 1`] = `
<Button
  ga={null}
  googleSignIn={[Function]}
  googleSignOut={[Function]}
/>
`;

exports[`withGoogle test render test render correctly 1`] = `
<class_1
  ga={null}
  googleSignIn={[Function]}
  googleSignOut={[Function]}
/>
`;
